--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2,22 +2,70 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ms+Madi&family=Teko:wght@300&display=swap');
+
+:root{
+  --violeta: rgba(112, 0, 255, 0.80);
+  --blanco: rgba(255, 255, 255, 0.55);
+  --celeste: rgba(0, 87, 255, 0.8);
+  --white-t: rgba(255, 255, 255, 0.08);
+  --black-t: rgb(0 0 0 / 27%);
+}
+
 body {
   margin: 0px;
   padding: 0px;
 }
 
 .bg {
-  background-color: "#fff";
+  background-color: #f5f5f5;
   background-attachment: fixed;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%239C92AC' fill-opacity='0.09'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%233d3d3d' fill-opacity='0.25'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
-.bg-gradient {
-  background-color: "#fff";
-  background-image: url("autumn.svg");
-  background-attachment: fixed;
-  background-repeat: repeat;
+.gradient {
+  background: linear-gradient(
+    to left,
+    var(--violeta),
+    var(--blanco),
+    var(--celeste)
+  );
+}
+
+.title {
+  color: white;
+  font-size: 4.5rem/* 72px */;
+  line-height: 1;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
+  font-weight: 900;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border-radius: 15px;
+  font-weight: 500;
+  background: var(--white-t);
+  backdrop-filter: blur(30px);
+  color: white;
+  padding: 1rem;
+  box-shadow: 4px 7px 15px rgba(0, 0, 0, 0.08);
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
+}
+
+.bg-blur {
+  background: var(--white-t);
+  backdrop-filter: blur(2px);
+}
+
+.white-card {
+  height: 70px;
+  width: 70px;
+  background: white;
+  border-radius: 15px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.08);
 }
 
 .zoom {
@@ -25,4 +73,29 @@ body {
 }
 .zoom:hover {
   transform: scale(1.1);
+}
+
+.cursive {
+  font-family: 'Ms Madi', cursive;
+}
+
+.teko {
+  font-family: 'Teko', sans-serif;
+}
+
+.roboto {
+  font-family: 'Roboto', sans-serif;
+}
+
+body::-webkit-scrollbar {
+  width: 5px;               /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: transparent;        /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: lightgrey;    /* color of the scroll thumb */
+  border-radius: 10px;       /* roundness of the scroll thumb */
 }
