--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -6,9 +6,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Ms+Madi&family=Teko:wght@300&display=swap');
 
 :root{
-  --violeta: rgba(111, 0, 255, 0.384);
-  --blanco: rgba(255, 255, 255, 0.55);
-  --celeste: rgba(0, 85, 255, 0.37);
+  --violeta: rgba(111, 0, 255, 0.637);
+  --lila: rgba(206, 154, 255, 0.39);
+  --celeste: rgba(0, 67, 202, 0.747);
   --white-t: rgba(255, 255, 255, 0.08);
   --black-t: rgba(94, 94, 94, 0.27);
 }
@@ -22,15 +22,6 @@ body {
   background-color: #f5f5f5;
   background-attachment: fixed;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%233d3d3d' fill-opacity='0.25'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-}
-
-.gradient {
-  background: linear-gradient(
-    to left,
-    var(--violeta),
-    var(--blanco),
-    var(--celeste)
-  );
 }
 
 .title {
@@ -99,3 +90,34 @@ body::-webkit-scrollbar-thumb {
   background-color: lightgrey;    /* color of the scroll thumb */
   border-radius: 10px;       /* roundness of the scroll thumb */
 }
+
+
+@media (max-width: 1000px) {
+  .gradient {
+    background: linear-gradient(
+      to top,
+      var(--violeta),
+      var(--celeste)
+    );
+  }
+}
+@media (min-width: 1000px){ 
+  .gradient {
+    background: linear-gradient(
+      to left,
+      var(--violeta),
+      var(--celeste)
+    );
+  }
+ }
+@media (min-width: 1280px) { 
+  .gradient {
+    background: linear-gradient(
+      to left,
+      var(--violeta),
+      var(--lila),
+      var(--celeste)
+    );
+  }
+ }
+@media (min-width: 1536px) {  }
