--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -100,17 +100,13 @@ body::-webkit-scrollbar-thumb {
       var(--celeste)
     );
   }
+
+  .card {
+    height: 200px;
+    width: 320px;
+  }
 }
 @media (min-width: 1000px){ 
-  .gradient {
-    background: linear-gradient(
-      to left,
-      var(--violeta),
-      var(--celeste)
-    );
-  }
- }
-@media (min-width: 1280px) { 
   .gradient {
     background: linear-gradient(
       to left,
@@ -119,5 +115,10 @@ body::-webkit-scrollbar-thumb {
       var(--celeste)
     );
   }
+  .card {
+    height: 280px;
+    width: 280px;
+  }
  }
+@media (min-width: 1280px) {  }
 @media (min-width: 1536px) {  }
